editing pic name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body { font-family: Arial, sans-serif; margin:0; background:#f6f6f6; color:#222; }
     header {
       background: linear-gradient(rgba(0,0,0,.45), rgba(0,0,0,.45)),
-            url('hillsborough-church-lake.jpg') center/cover;
+            url('hillsborough-church-lake.JPG') center/cover;
       color: white; padding: 80px 20px; text-align: center;
     }
     header h1 { margin:0 0 10px; font-size: 40px; }
