--- a/index.html
+++ b/index.html
@@ -143,6 +143,44 @@
         </div>
       </div>
 
+      <!-- THE HILLSIDE PUB -->
+<div class="card">
+  <h3>The Hillside Pub</h3>
+
+  <div class="tagrow">
+    <span class="tag">Historic pub</span>
+    <span class="tag">Food & drink</span>
+    <span class="tag">Village landmark</span>
+  </div>
+
+  <p>
+    Hillsborough’s oldest pub, established in <strong>1752</strong>. The Hillside is a much-loved
+    village institution, known for its welcoming atmosphere, traditional character, and quality
+    food and drink.
+  </p>
+
+  <ul>
+    <li>Best for: lunch, dinner, local pints, relaxed evenings</li>
+    <li>Location: heart of Hillsborough village</li>
+  </ul>
+
+  <div class="btnrow">
+    <a class="btn primary"
+       href="https://www.hillsidehillsborough.co.uk"
+       target="_blank"
+       rel="noopener">
+      Official website
+    </a>
+
+    <a class="btn"
+       href="https://www.google.com/maps/search/?api=1&query=The+Hillside+Pub+Hillsborough"
+       target="_blank"
+       rel="noopener">
+      Open in Google Maps
+    </a>
+  </div>
+</div>
+
       <!-- OPTIONAL: SIMPLE ITINERARY -->
       <div class="card">
         <h3>Simple Half-Day Itinerary</h3>
