--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <div class="card">
       <h2>3 Highlights in Hillsborough, Co. Down</h2>
       <p>
-        Here are three must-see spots: Hillsborough Castle & Gardens, St Malachy’s Church,
-        and Hillsborough Forest Park. Tap the buttons for official info, maps, and planning.
+        Here are four must-see spots: Hillsborough Castle & Gardens, St Malachy’s Church,
+        and Hillsborough Forest Park and the world famous Hillside Pub and Restaurant. Tap the buttons for official info, maps, and planning.
       </p>
       <p class="small">
         Tip: If you’re on mobile, open links in a new tab so you can easily come back here.
