--- a/index.html
+++ b/index.html
@@ -183,14 +183,13 @@
 
       <!-- OPTIONAL: SIMPLE ITINERARY -->
       <div class="card">
-        <h3>Simple Half-Day Itinerary</h3>
+        <h3>Day long Itinerary</h3>
         <ul>
-          <li><strong>Start:</strong> Coffee in The Square</li>
-          <li><strong>Mid:</strong> Hillsborough Castle & Gardens</li>
+          <li><strong>Start:</strong> Hillsborough Castle and Gardens</li>
+          <li><strong>Mid:</strong> Lunch in Hillside Pub and Restaurant</li>
           <li><strong>Then:</strong> Short stop at St Malachy’s</li>
           <li><strong>Finish:</strong> Walk in Hillsborough Forest Park</li>
         </ul>
-        <p class="small">Want a full-day version with food stops? Tell me and I’ll add it.</p>
       </div>
 
     </div>
