adding castle audio

--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
           A historic royal residence with beautifully maintained gardens and seasonal events.
           Ideal for a half-day visit with cafés and gift shop on-site.
         </p>
+        <div style="margin:12px 0;">
+  <strong>Listen:</strong>
+  <audio controls style="width:100%; margin-top:6px;">
+    <source src="HillsboroughCastleAudio.m4a" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</div>
         <ul>
           <li>Best for: history lovers, gardens, photography</li>
           <li>Allow: 2–4 hours (longer if you explore the grounds)</li>
