playing with audio

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div style="margin:12px 0;">
   <strong>Listen:</strong>
   <audio controls style="width:100%; margin-top:6px;">
-    <source src="HillsboroughCastleAudio.m4a" type="audio/mpeg">
+    <source src="HillsboroughCastleAudio.m4a" type="audio/m4a">
     Your browser does not support the audio element.
   </audio>
 </div>
