add st malachys audio

--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
           A peaceful and historic church in the village—great for a quiet moment and a short
           heritage stop while exploring Hillsborough’s streets and The Square.
         </p>
+
+        <div style="margin:12px 0;">
+  <strong>Listen:</strong>
+  <audio controls style="width:100%; margin-top:6px;">
+    <source src="StMalachysHillsborough.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</div>
         <ul>
           <li>Best for: local history, architecture, calm atmosphere</li>
           <li>Allow: 20–45 minutes (more if you stroll the village)</li>
