removing surplus and

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h2>4 Highlights in Hillsborough, Co. Down</h2>
       <p>
         Here are four must-see spots: Hillsborough Castle & Gardens, St Malachy’s Church,
-        and Hillsborough Forest Park and the world famous Hillside Pub and Restaurant. Tap the buttons for official info, maps, and planning.
+        Hillsborough Forest Park and the world famous Hillside Pub and Restaurant. Tap the buttons for official info, maps, and planning.
       </p>
       <p class="small">
         Tip: If you’re on mobile, open links in a new tab so you can easily come back here.
