--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Explorer Royal Hillsborough</title>
+  <title>Explore Royal Hillsborough</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
