add ing email address

--- a/index.html
+++ b/index.html
@@ -207,10 +207,19 @@
         </ul>
       </div>
 
-    </div>
+    </div><section class="contact">
+  <h2>Contact Us</h2>
+  <p>
+    Have a question or suggestion?  
+    Email us at 
+    <a href="mailto:info@exploreroyalhillsborough.com">
+      info@exploreroyalhillsborough.com
+    </a>
+  </p>
+</section>
 
     <footer>
-      © Explorer Royal Hillsborough
+      © Explore Royal Hillsborough
     </footer>
 
   </div>
