updating email address

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
   <p>
     Have a question or suggestion?  
     Email us at 
-    <a href="mailto:info@exploreroyalhillsborough.com">
-      info@exploreroyalhillsborough.com
+    <a href="mailto:marksmith33@yahoo.com">
+      marksmith33@yahoo.com
     </a>
   </p>
 </section>
