correct explorer typo

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Explore Royal Hillsborough</title>
+<title>Explore Royal Hillsborough</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -46,7 +45,7 @@
 
 <body>
   <header>
-    <h1>Explorer Royal Hillsborough</h1>
+    <h1>Explore Royal Hillsborough</h1>
     <p>Castle history • woodland walks • local heritage</p>
   </header>
 
