--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
     <div class="card">
       <h2>4 Highlights in Hillsborough, Co. Down</h2>
       <p>
-        Here are four must-see spots: Hillsborough Castle & Gardens, St Malachy’s Church,
-        Hillsborough Forest Park and the world famous Hillside Pub and Restaurant. Tap the buttons for official info, maps, and planning.
+        Here are four must-see spots: </p> Castle & Gardens <p>St Malachy’s Church</p>
+        <p>Hillsborough Forest Park</p> 
+        <p>The world famous Hillside Pub and Restaurant</p> Tap the buttons for official info, maps, and planning.
       </p>
       <p class="small">
         Tip: If you’re on mobile, open links in a new tab so you can easily come back here.
