--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     <div class="card">
       <h2>4 Highlights in Hillsborough, Co. Down</h2>
       <p>
-        Here are four must-see spots: </p> Castle & Gardens <p>St Malachy’s Church</p>
+        Here are four must-see spots: </p> <p>Hillsborough Castle & Gardens</p>
+        <p>St Malachy’s Church</p>
         <p>Hillsborough Forest Park</p> 
         <p>The world famous Hillside Pub and Restaurant</p> Tap the buttons for official info, maps, and planning.
       </p>
