change email text

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </div><section class="contact">
   <h2>Contact Us</h2>
   <p>
-    Have a question or suggestion?  
+    To advertise your business or submit a suggestion...
     Email us at 
     <a href="mailto:marksmith33@yahoo.com">
       marksmith33@yahoo.com
