--- a/index.html
+++ b/index.html
@@ -217,7 +217,10 @@
       marksmith33@yahoo.com
     </a>
   </p>
-</section>
+</section><div style="margin-top:20px; text-align:center; font-size:14px; opacity:0.8;">
+  Visitors:
+  <img src="https://visitorbadge.io/api/visitors?path=exploreroyalhillsborough.com&countColor=%23263759" alt="Visitors"/>
+</div>
 
     <footer>
       © Explore Royal Hillsborough
