--- a/index.html
+++ b/index.html
@@ -217,9 +217,17 @@
       marksmith33@yahoo.com
     </a>
   </p>
-</section><div style="margin-top:20px; text-align:center; font-size:14px; opacity:0.8;">
+</section>
+
+<div style="margin-top:20px; text-align:center; font-size:14px; opacity:0.8;">
   Visitors:
-  <img src="https://visitorbadge.io/api/visitors?path=exploreroyalhillsborough.com&countColor=%23263759" alt="Visitors"/>
+  <img
+    src="https://visitorbadge.io/api/visitors?path=exploreroyalhillsborough.com&countColor=%23263759"
+    alt="Visitors counter"
+    loading="lazy"
+    decoding="async"
+    onerror="this.style.display='none'; this.insertAdjacentHTML('afterend',' <span>(counter unavailable)</span>');"
+  />
 </div>
 
     <footer>
