amending st malachy button link

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
           <a class="btn" href="https://www.google.com/maps/search/?api=1&query=St+Malachy%27s+Church+Hillsborough" target="_blank" rel="noopener">
             Open in Google Maps
           </a>
-          <a class="btn primary" href="https://www.discovernorthernireland.com/" target="_blank" rel="noopener">
-            More things nearby
+          <a class="btn primary" href="https://www.nationalchurchestrust.org/explore/northern-ireland" target="_blank" rel="noopener">
+            More historic churches
           </a>
         </div>
       </div>
